fix spacing and opacity of post modal and background application

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -55,34 +55,6 @@ header, .title, .welcome {
   left: 0;
 }
 
-#postOverlay {
-  border-radius: 7%;
-  display: none;
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  z-index: 1;
-}
-
-.post-modal {
-  background-color: red;
-  box-shadow: 3px 4px 5px 0px rgba(0, 0, 0, 0.38);
-  height: 300px;
-  margin: auto;
-  margin-top: 70px;
-  margin-left: 1000px;
-  max-width: 600px;
-  padding: 20px;
-  position: static;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-}
-
-
 nav {
   align-items: center;
   background-color: #34c759;
@@ -97,9 +69,14 @@ nav {
   width: 8%;
 }
 
-.profile-button:hover, .close-profile-button:hover, .water-button:hover, .bed-button:hover {
+.profile-button:hover, .close-profile-button:hover, .water-button:hover, .bed-button:hover, .walk-button:hover, .post-button:hover{
   box-shadow: 0 0 0.25em 0.25em rgba(0, 0, 0, 0.25);
   border-radius: 50%;
+  cursor: pointer;
+}
+
+.submit:hover {
+  box-shadow: 0 0 0.25em 0.25em rgba(0, 0, 0, 0.25);
   cursor: pointer;
 }
 
@@ -187,10 +164,6 @@ main {
   width: 96%;
 }
 
-.hidden {
-  display: none;
-}
-
 .post-modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
@@ -201,16 +174,16 @@ main {
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
 }
 
 /* Modal Content/Box */
 .modal-content {
-  background-color: #fefefe;
+  background-color: #72d8ff;
   margin: 15% auto; /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+  width: 40%; /* Could be more or less, depending on screen size */
 }
 
 /* The Close Button */
@@ -226,4 +199,8 @@ main {
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+.hidden {
+  display: none;
 }
